--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,44 @@
+amqp==5.1.1
+ansicon==1.89.0
+APScheduler==3.9.1.post1
+arrow==1.2.3
 asgiref==3.5.0
+async-timeout==4.0.2
+billiard==3.6.4.0
+blessed==1.19.1
+celery==5.2.7
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.6
 Django==4.0.2
-django-widget-tweaks==1.4.12
-sqlparse==0.4.2
-tzdata==2021.5
-whitenoise==6.0.0
+django-admin-notification==0.2
+django-celery-beat==2.4.0
+django-js-asset==2.0.0
 django-mptt==0.14.0
 django-numerators==0.0.2
+django-picklefield==3.1
 django-polymorphic==3.1.0
+django-q==1.3.9
+django-timezone-field==5.0
+django-widget-tweaks==1.4.12
+djangorestframework==3.14.0
+jinxed==1.2.0
+kombu==5.2.4
 Pillow==9.3.0
+prompt-toolkit==3.0.36
+python-crontab==2.7.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+redis==3.5.3
+schedule==1.1.0
+six==1.16.0
+sqlparse==0.4.2
+timeloop==1.0.2
+tzdata==2021.5
+tzlocal==4.2
+vine==5.0.0
+wcwidth==0.2.6
+whitenoise==6.0.0
